# signalfetch

./: .gitignore  README.md  pyproject.toml
signalfetch/: __init__.py
signalfetch/core/: __init__.py
signalfetch/core/agents/: __init__.py  base.py
signalfetch/core/fetchers/: __init__.py  api.py  crawler.py  document.py
signalfetch/core/llm/: __init__.py  base.py  claude.py
signalfetch/core/models/: __init__.py  datapoint.py
signalfetch/funds/: __init__.py
signalfetch/macro/: __init__.py
signalfetch/mcp/: __init__.py
signalfetch/ontology/: __init__.py
