[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalfetch"
version = "0.1.0"
description = "Modular framework for retrieving and extracting publicly available financial and economic data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "anthropic>=0.25",
]

[project.optional-dependencies]
funds = [
    "pypdf>=4.0",
    "anthropic>=0.25",
]
ontology = [
    "rdflib>=7.0",
]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
